# formation-Python_perfectionnement_bases

./: 404.html  Makefile  README.md  README_en.md  demo_deco.ipynb  demo_iterateur.ipynb  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirement-dev.txt  requirements-dev.txt  requirements.txt
app/: __main__.py  mylib.py
assets/: notes_francais_anglais_hg_pc.csv
demos/: __main__.py  academy.py  demo1.ipynb  demo_bases.ipynb  demo_closure.ipynb  demo_closures.ipynb  demo_cm.ipynb  demo_cm.py  demo_contextmanager.ipynb  demo_data.py  demo_datastructure.ipynb  demo_datatypes.ipynb  demo_deco.ipynb  demo_dict_slots.ipynb  demo_gen.ipynb  demo_iter.ipynb  demo_loops.ipynb  demo_meta.ipynb  demo_obj.ipynb  demo_objet_generalites.ipynb  demo_param.py  demo_params.ipynb  demo_path.ipynb  demo_pathlib.ipynb  demo_visibilite.ipynb  functions_funcprogramming.ipynb  functions_idiom.ipynb  lists.ipynb  main_file.py  my_lib.py  mylib.py  objet.ipynb  rappel_functions.ipynb  training.py
docs/: index.md
en/: index.html
exercices/: exo_01.py  exo_02.py  exo_closure.py  exo_cm1.py  exo_cm2.py  exo_cm3.py  exo_iter1.py  exo_iter2.py
exos/: exo_01.py  exo_02.py  exo_03_iterations.py
exos_correction/: context_managers.ipynb  exercice1.py  exo01.py  exo_01.py  exo_02.py  exo_03.py  exo_closures.ipynb  exo_deco.ipynb  exo_school.py  exo_threading.py
exos_corrections/: exo_01.py  exo_closure.py  exo_cm1.py  exo_cm2.py  exo_cm3.py  exo_deco1.py  exo_deco2.py  exo_deco3.py  exo_hp.py  exo_zip.py
fr/: index.html
pyflix/: media_db.py
pylib/: datasource.py  settings.py
(+266 files in other folders)
