[project]
name = "formation-python-perfectionnement-bases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.2",
    "pytz>=2025.2",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "ipython>=9.2.0",
    "jupyterlab>=4.4",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.14.0",
]
